-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
There's a scenario when IB port going down triggers the following assertion:
case RDMA_CM_EVENT_UNREACHABLE:
conn = cmid->context;
LASSERT(conn->ibc_state == IBLND_CONN_ACTIVE_CONNECT ||
conn->ibc_state == IBLND_CONN_PASSIVE_WAIT);
Because connection is already disconnected due to an earlier "RDMA Timeout".
Since it appears to be possible to get RDMA_CM_EVENT_UNREACHABLE after having decided to close the connection, this code should be changed.
- is related to
-
LU-18260 o2iblnd: graceful handling of unexpected RDMA_CM_EVENT_REJECTED
-
- Resolved
-